[project]
name = "uniswap-v3-subgraph-mcp-server"
version = "0.1.0"
description = "MCP server for Uniswap V3 Subgraph API"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "starlette>=0.48.0",
    "retry>=0.9.2",
    "gql>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "server.py",
    "mcp_health_check.py",
] 